# pylsp_fundamental_testing

Amarchinta_2010/: .swp
Amarchinta_2010/.pylsp/: pyvenv.cfg
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/: README.md  prepare_simulation_environment.sh  que_job_on_slurm_cluster.sh  run_simulation.py
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/: Makefile  setup.cfg  setup.py  tox.ini
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/foam/: CMakeLists.txt  krakenBuild  log.cmake  log.make
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/foam/applications/solvers/solids4Foam/: solids4Foam.C
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/foam/applications/utilities/createMaps/: createMaps.C
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/foam/applications/utilities/initCase/: initCase.C
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/foam/applications/utilities/patch2cell/: patch2cell.C
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/foam/applications/utilities/postprocessing/: epsilonEq.H  epsilonPEq.H  postprocessing.C  postprocessing.H  pstress.H  sigmaEq.H
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/foam/applications/utilities/sub2mesh/: sub2mesh.C
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/foam/applications/utilities/subsetMesh/: subsetMesh.C
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/foam/src/solids4FoamModels/materialModels/mechanicalModel/homogenization/: homogenization.C  homogenization.H  myLinearElastic.C
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/foam/src/solids4FoamModels/materialModels/mechanicalModel/linearGeometryLaws/linearElasticMisesPlasticJC/: linearElasticMisesPlasticJC.C  linearElasticMisesPlasticJC.H
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/foam/src/solids4FoamModels/materialModels/mechanicalModel/linearGeometryLaws/linearElasticMisesPlasticLH/: linearElasticMisesPlasticLH.C  linearElasticMisesPlasticLH.H
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/foam/src/solids4FoamModels/materialModels/mechanicalModel/linearGeometryLaws/myLinearElastic/: myLinearElastic.C  myLinearElastic.H
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/foam/src/solids4FoamModels/materialModels/mechanicalModel/linearGeometryLaws/myLinearElasticMisesPlastic/: myLinearElasticMisesPlastic.C  myLinearElasticMisesPlastic.H  yieldedAvailable.H
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/foam/src/solids4FoamModels/solidModels/fvPatchFields/laserProcessingPressure/: laserProcessingPressureFvPatchVectorField.C  laserProcessingPressureFvPatchVectorField.H
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/foam/src/solids4FoamModels/solidModels/fvPatchFields/oldLaserProcessingPressure/: laserProcessingPressureFvPatchVectorField.C  laserProcessingPressureFvPatchVectorField.H
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/foam/src/solids4FoamModels/solidModels/laserIntenzitySolver/: laserIntenzitySolver.C  laserIntenzitySolver.H
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/foam/src/solids4FoamModels/solidModels/materialPoint/: materialPoint.C  materialPoint.H
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/foam/src/solids4FoamModels/solidModels/myExplicitLinGeomTotalDispSolid/: myExplicitLinGeomTotalDispSolid.C  myExplicitLinGeomTotalDispSolid.H
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/foam/src/solids4FoamModels/solidModels/myExplicitUnsLinGeomTotalDispSolid/: myExplicitUnsLinGeomTotalDispSolid.C  myExplicitUnsLinGeomTotalDispSolid.H
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/foam/src/solids4FoamModels/solidModels/myLinGeomTotalDispSolid/: myLinGeomTotalDispSolid.C  myLinGeomTotalDispSolid.H
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/foam/src/solids4FoamModels/solidModels/myUnsLinGeomSolid/: myUnsLinGeomSolid.C  myUnsLinGeomSolid.H
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/pylsp/: __init__.py  bash.py  foam.py  pylsp.py  pylsp.py~  utils.py  utils.py~
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/pylsp/case/: __init__.py  case.py  case.py~
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/pylsp/case/constant/: __init__.py  dynamicMeshDict.py  dynamicMeshDict.py~  g.py  g.py~  physicsProperties.py  physicsProperties.py~
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/pylsp/case/draft/: __init__.py  draft.py  draft.py~
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/pylsp/case/draft/constant/: __init__.py  laserBeamProperties.py  mechanicalProperties.py  mechanicalProperties.py~  solidProperties.py  solidProperties.py~
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/pylsp/case/draft/system/: __init__.py  controlDict.py  controlDict.py~
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/pylsp/case/loadCase/: __init__.py  loadCase.py  loadCase.py~
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/pylsp/case/relax/: __init__.py  relax.py  relax.py~
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/pylsp/case/system/: __init__.py  fvSchemes.py  fvSchemes.py~
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/AA_sof_pylsp/pylsp/case/trans/: __init__.py  trans.py  trans.py~
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/BB_laser_props/: laser_characterization.py  o_laserBeamsFunctionV4.py
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/mesh_20microns/: shm.out  slurm_mesh.sh
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/mesh_20microns/system/: blockMeshDict  controlDict  decomposeParDict  meshGenerationSettings  meshQualityDict  snappyHexMeshDict  topoSetDict
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/mesh_40microns/: clean_mesh.sh  local_mesh.sh
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/mesh_40microns/system/: fvSchemes  fvSolution  meshGenerationSettings
Amarchinta_2010/01_Ti6–Al–4V_5.5GPa/mesh_boundary_conditions/: D
(+38 files in other folders)
